[gd_scene load_steps=22 format=3 uid="uid://207fyv11i2ku"]

[ext_resource type="Script" path="res://Gui/settings/settingsNode.gd" id="1_813qu"]
[ext_resource type="Texture2D" uid="uid://lbffwhyli3he" path="res://Graphics/Tiles/Inventory/inventoryBackground.png" id="2_lvn78"]
[ext_resource type="Theme" uid="uid://b2uy6bnmbr7gi" path="res://Gui/SettingsButton.tres" id="3_aa24l"]
[ext_resource type="FontFile" uid="uid://dxj8pl54pw24t" path="res://Gui/MinimalPixel v2.ttf" id="4_i6hkt"]
[ext_resource type="Texture2D" uid="uid://djvbwvg7rq24l" path="res://Graphics/Sprites/Collectables/gem.png" id="4_rsmll"]
[ext_resource type="Script" path="res://Gui/settings/MasterSlider.gd" id="5_6ih4m"]
[ext_resource type="Texture2D" uid="uid://dbpp2jnd1u551" path="res://Graphics/Gui/GUIGlobal.png" id="5_66vnm"]
[ext_resource type="Script" path="res://Gui/settings/MusicSlider.gd" id="6_anup6"]
[ext_resource type="Script" path="res://Gui/settings/SFXSlider.gd" id="7_bdfor"]
[ext_resource type="Texture2D" path="res://Graphics/lights/cassette.png" id="10_4wrmq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4wmbf"]
texture = ExtResource("5_66vnm")
texture_margin_left = 4.0
texture_margin_right = 4.0
region_rect = Rect2(112, 80, 32, 16)
modulate_color = Color(0.227451, 0.137255, 0.337255, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qfmy3"]
texture = ExtResource("5_66vnm")
texture_margin_left = 4.0
texture_margin_right = 4.0
region_rect = Rect2(112, 80, 32, 16)
modulate_color = Color(0.345098, 0.219608, 0.498039, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xjvho"]
texture = ExtResource("5_66vnm")
texture_margin_left = 4.0
texture_margin_right = 4.0
region_rect = Rect2(112, 96, 32, 16)
modulate_color = Color(0.227451, 0.137255, 0.337255, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v0uik"]
modulate_color = Color(0.227451, 0.137255, 0.337255, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mr2da"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kviy8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_egjbp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8530"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4px2s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mlcho"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ogg64"]

[node name="SettingsNode" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_813qu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -47.0
offset_right = 88.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lvn78")

[node name="SettingsBox" type="Control" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -47.5
offset_right = 85.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2

[node name="Ajustes" type="VBoxContainer" parent="TextureRect/SettingsBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -33.0
offset_right = 66.0
offset_bottom = 33.0
grow_vertical = 2
theme_override_constants/separation = 5

[node name="SoundButton" type="Button" parent="TextureRect/SettingsBox/Ajustes"]
self_modulate = Color(0.423529, 0.286275, 0.694118, 1)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_aa24l")
text = "Audio"

[node name="VideoButtton" type="Button" parent="TextureRect/SettingsBox/Ajustes"]
self_modulate = Color(0.423529, 0.286275, 0.694118, 1)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_aa24l")
text = "Screen"

[node name="BackButton" type="Button" parent="TextureRect/SettingsBox/Ajustes"]
self_modulate = Color(0.227451, 0.137255, 0.337255, 1)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_aa24l")
text = "Back"

[node name="ExitButton" type="Button" parent="TextureRect/SettingsBox"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -94.5
offset_top = 2.5
offset_right = -17.5
offset_bottom = 26.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_i6hkt")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxTexture_4wmbf")
theme_override_styles/hover = SubResource("StyleBoxTexture_qfmy3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xjvho")
theme_override_styles/disabled = SubResource("StyleBoxTexture_v0uik")
theme_override_styles/focus = SubResource("StyleBoxTexture_mr2da")
text = "Save and Exit"

[node name="Video" type="Control" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -43.0
offset_right = 60.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="TextureRect/Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_aa24l")

[node name="Fullscreen" type="Label" parent="TextureRect/Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 12
text = "Fullscreen
"
horizontal_alignment = 1

[node name="Borderless" type="Label" parent="TextureRect/Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 12
text = "Borderless
"
horizontal_alignment = 1

[node name="Vsync" type="Label" parent="TextureRect/Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 12
text = "Vsync
"
horizontal_alignment = 1

[node name="Checks" type="VBoxContainer" parent="TextureRect/Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Fullscreen" type="CheckBox" parent="TextureRect/Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_kviy8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_egjbp")
theme_override_styles/disabled = SubResource("StyleBoxTexture_h8530")
theme_override_styles/hover = SubResource("StyleBoxTexture_4px2s")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_mlcho")
theme_override_styles/focus = SubResource("StyleBoxTexture_ogg64")

[node name="Borderless" type="CheckBox" parent="TextureRect/Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_kviy8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_egjbp")
theme_override_styles/disabled = SubResource("StyleBoxTexture_h8530")
theme_override_styles/hover = SubResource("StyleBoxTexture_4px2s")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_mlcho")
theme_override_styles/focus = SubResource("StyleBoxTexture_ogg64")

[node name="Vsync" type="CheckBox" parent="TextureRect/Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_kviy8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_egjbp")
theme_override_styles/disabled = SubResource("StyleBoxTexture_h8530")
theme_override_styles/hover = SubResource("StyleBoxTexture_4px2s")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_mlcho")
theme_override_styles/focus = SubResource("StyleBoxTexture_ogg64")

[node name="BackFromVideo" type="Button" parent="TextureRect/Video"]
self_modulate = Color(0.227451, 0.137255, 0.337255, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -13.0
offset_right = 22.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme = ExtResource("3_aa24l")
text = "Back"

[node name="Audio" type="Control" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -37.5
offset_right = 69.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="TextureRect/Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_aa24l")

[node name="Master" type="Label" parent="TextureRect/Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 9
text = "Master
"
horizontal_alignment = 1

[node name="Music" type="Label" parent="TextureRect/Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 9
text = "Music
"
horizontal_alignment = 1

[node name="SFX" type="Label" parent="TextureRect/Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 9
text = "Sfx
"
horizontal_alignment = 1

[node name="Sliders" type="VBoxContainer" parent="TextureRect/Audio/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01

[node name="MasterSlider" type="HSlider" parent="TextureRect/Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("4_rsmll")
theme_override_icons/grabber_highlight = ExtResource("4_rsmll")
theme_override_icons/grabber_disabled = ExtResource("4_rsmll")
max_value = 1.0
step = 0.05
ticks_on_borders = true
script = ExtResource("5_6ih4m")

[node name="MusicSlider" type="HSlider" parent="TextureRect/Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("4_rsmll")
theme_override_icons/grabber_highlight = ExtResource("4_rsmll")
theme_override_icons/grabber_disabled = ExtResource("4_rsmll")
max_value = 1.0
step = 0.05
script = ExtResource("6_anup6")

[node name="SFXSlider" type="HSlider" parent="TextureRect/Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("4_rsmll")
theme_override_icons/grabber_highlight = ExtResource("4_rsmll")
theme_override_icons/grabber_disabled = ExtResource("4_rsmll")
theme_override_icons/tick = ExtResource("4_rsmll")
max_value = 1.0
step = 0.001
script = ExtResource("7_bdfor")

[node name="BackFromAudio" type="Button" parent="TextureRect/Audio"]
self_modulate = Color(0.227451, 0.137255, 0.337255, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -13.0
offset_right = 22.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme = ExtResource("3_aa24l")
text = "Back"

[node name="Cassette" type="Sprite2D" parent="."]
position = Vector2(32, -11)
rotation = 0.106465
scale = Vector2(0.488095, 0.442982)
texture = ExtResource("10_4wrmq")

[connection signal="pressed" from="TextureRect/SettingsBox/Ajustes/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="TextureRect/SettingsBox/Ajustes/VideoButtton" to="." method="_on_video_buttton_pressed"]
[connection signal="pressed" from="TextureRect/SettingsBox/Ajustes/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="TextureRect/SettingsBox/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="TextureRect/Video/HBoxContainer/Checks/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="TextureRect/Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="pressed" from="TextureRect/Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
